// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Governance > preimage submission, query and removal works > note preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Kusama Governance > preimage submission, query and removal works > unnote preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's class locks after vote's rescission 1`] = `
[
  [
    30,
    50000000000,
  ],
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after casting his 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [
    [
      470,
      {
        "standard": {
          "balance": 50000000000,
          "vote": "0x83",
        },
      },
    ],
  ],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after referendum's cancellation 1`] = `
{
  "casting": {
    "delegations": {
      "capital": 0,
      "votes": 0,
    },
    "prior": [
      0,
      0,
    ],
    "votes": [
      [
        470,
        {
          "standard": {
            "balance": 50000000000,
            "vote": "0x83",
          },
        },
      ],
    ],
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's class locks after vote's rescission 1`] = `
[
  [
    30,
    60000000000,
  ],
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after casting his 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [
    [
      470,
      {
        "split": {
          "aye": 50000000000,
          "nay": 10000000000,
        },
      },
    ],
  ],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after referendum's cancellation 1`] = `
{
  "casting": {
    "delegations": {
      "capital": 0,
      "votes": 0,
    },
    "prior": [
      0,
      0,
    ],
    "votes": [
      [
        470,
        {
          "split": {
            "aye": 50000000000,
            "nay": 10000000000,
          },
        },
      ],
    ],
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's class locks after vote's rescission 1`] = `
[
  [
    30,
    80000000000,
  ],
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after casting hers 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [
    [
      470,
      {
        "splitAbstain": {
          "abstain": 20000000000,
          "aye": 50000000000,
          "nay": 10000000000,
        },
      },
    ],
  ],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after referendum's cancellation 1`] = `
{
  "casting": {
    "delegations": {
      "capital": 0,
      "votes": 0,
    },
    "prior": [
      0,
      0,
    ],
    "votes": [
      [
        470,
        {
          "splitAbstain": {
            "abstain": 20000000000,
            "aye": 50000000000,
            "nay": 10000000000,
          },
        },
      ],
    ],
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for alice's vote 1`] = `
[
  {
    "data": {
      "amount": "(rounded 490000000)",
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 50000000000,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 390000000)",
      "who": "F3opxRbN5ZbjJNU511Kj2TLuzFcDq9BGduA9TgiECafpg29",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 98000000)",
      "who": "GqYfvRE6VNAsNbTZxEt4mV6KHrC3dF1APxn2urjuqHpFiYx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 490000000)",
      "tip": 0,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1200000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for bob's decision deposit 1`] = `
[
  {
    "data": {
      "amount": "(rounded 33000000000)",
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "method": "DecisionDepositPlaced",
    "section": "referenda",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for charlie's vote 1`] = `
[
  {
    "data": {
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 490000000)",
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 50000000000,
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 390000000)",
      "who": "F3opxRbN5ZbjJNU511Kj2TLuzFcDq9BGduA9TgiECafpg29",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 98000000)",
      "who": "GqYfvRE6VNAsNbTZxEt4mV6KHrC3dF1APxn2urjuqHpFiYx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 490000000)",
      "tip": 0,
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1200000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for dave's vote 1`] = `
[
  {
    "data": {
      "who": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 540000000)",
      "who": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 60000000000,
      "who": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 430000000)",
      "who": "F3opxRbN5ZbjJNU511Kj2TLuzFcDq9BGduA9TgiECafpg29",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 110000000)",
      "who": "GqYfvRE6VNAsNbTZxEt4mV6KHrC3dF1APxn2urjuqHpFiYx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 540000000)",
      "tip": 0,
      "who": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1200000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for eve's vote 1`] = `
[
  {
    "data": {
      "who": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 590000000)",
      "who": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 80000000000,
      "who": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
    },
    "method": "Locked",
    "section": "balances",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Canceled",
    "section": "scheduler",
  },
  {
    "data": {
      "index": 0,
    },
    "method": "Scheduled",
    "section": "scheduler",
  },
  {
    "data": {
      "amount": 0,
      "who": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 470000000)",
      "who": "F3opxRbN5ZbjJNU511Kj2TLuzFcDq9BGduA9TgiECafpg29",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 120000000)",
      "who": "GqYfvRE6VNAsNbTZxEt4mV6KHrC3dF1APxn2urjuqHpFiYx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 590000000)",
      "tip": 0,
      "who": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 1200000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after alice's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 33333333333,
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 150000000000,
      "nays": 0,
      "support": 50000000000,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after charlie's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 33333333333,
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 150000000000,
      "nays": 0,
      "support": 50000000000,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after dave's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 33333333333,
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 155000000000,
      "nays": 1000000000,
      "support": 100000000000,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after eve's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 33333333333,
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 160000000000,
      "nays": 2000000000,
      "support": 170000000000,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info before decision deposit 1`] = `
{
  "ongoing": {
    "deciding": null,
    "decisionDeposit": null,
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 0,
      "nays": 0,
      "support": 0,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info post decision deposit 1`] = `
{
  "ongoing": {
    "deciding": null,
    "decisionDeposit": {
      "amount": 33333333333,
      "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
    },
    "submissionDeposit": {
      "amount": 33333333333,
      "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
    },
    "tally": {
      "ayes": 0,
      "nays": 0,
      "support": 0,
    },
    "track": 30,
  },
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum submission events 1`] = `
[
  {
    "data": {
      "proposal": {
        "Inline": "(hash)",
      },
      "track": 30,
    },
    "method": "Submitted",
    "section": "referenda",
  },
]
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum upon start of decision period 1`] = `
{
  "deciding": {
    "confirming": null,
  },
  "decisionDeposit": {
    "amount": 33333333333,
    "who": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
  },
  "enactment": {
    "after": 1,
  },
  "inQueue": false,
  "origin": {
    "origins": "SmallTipper",
  },
  "proposal": {
    "inline": "0x12030700e40b540200d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
  },
  "submissionDeposit": {
    "amount": 33333333333,
    "who": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
  },
  "tally": {
    "ayes": 0,
    "nays": 0,
    "support": 0,
  },
  "track": 30,
}
`;

exports[`Kusama Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > removal of votes in cancelled referendum 1`] = `
[
  {
    "data": {
      "amount": "(rounded 730000000)",
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "amount": 0,
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 590000000)",
      "who": "F3opxRbN5ZbjJNU511Kj2TLuzFcDq9BGduA9TgiECafpg29",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 150000000)",
      "who": "GqYfvRE6VNAsNbTZxEt4mV6KHrC3dF1APxn2urjuqHpFiYx",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 730000000)",
      "tip": 0,
      "who": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 150000)",
          "refTime": "(rounded 1400000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;
